platform/kube-prometheus/base/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  hostnames:
  - grafana.seigra.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: monitoring
    sectionName: grafana
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: grafana
      namespace: monitoring
      port: 3000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
