platform/kube-prometheus/base/grafana-networkpolicy.patch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingress:
  - {}
